<resources>
    <string name="app_name">EEG Recorder</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_scene_space">Scene Space</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="title_activity_scene_gallery">Scene Gallery</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="string_main">Main</string>
    <string name="string_scene_space">Scene Space</string>
    <string name="string_scene_gallery">Scene Gallery</string>
    <string name="string_muse">Muse Recording</string>
    <string name="string_essence">Essence</string>
    <string name="string_settings">Settings</string>
    <string name="placeholder_current_scene">
        <![CDATA[
          Current Scene:\n <b>%1$s</b>
         ]]>
        </string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>
    <string name="string_fab">FAB</string>
    <string name="button_resume">Resume</string>
    <string name="title_activity_muse_data">Muse Recording</string>
    <string name="placeholder_total_blinks">%1$d</string>
    <string name="placeholder_blink_rate">%1$s / min</string>


    <string name="pref_category_streaming">Streaming Settings</string>

    <string name="pref_title_streaming">Streaming</string>
    <string name="pref_title_streaming_type">Streaming Type</string>
    <string name="pref_title_address">Server address</string>
    <string name="pref_title_port">Port</string>

    <string name="pref_summary_enable_streaming">Enable/disable data streaming over the network</string>
    <string name="pref_summary_streaming_type_off">Stream Raw values</string>
    <string name="pref_summary_streaming_type_on">Stream Score values</string>
    <string name="pref_summary_address">IP address or host name of the server receiving the data (current: %1$s)</string>
    <string name="pref_summary_port">Server port (current: %1$s)</string>

    <string name="pref_enable_streaming">pref_enable_streaming</string>
    <string name="pref_streaming_type">pref_streaming_type</string>
    <string name="pref_address">pref_address</string>
    <string name="pref_port">pref_port</string>

    <string name="empty_string">Empty</string>


</resources>
