<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_streaming">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_enable_streaming"
            android:summary="@string/pref_summary_enable_streaming"
            android:title="@string/pref_title_streaming" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_streaming_type"
            android:summaryOff="@string/pref_summary_streaming_type_off"
            android:summaryOn="@string/pref_summary_streaming_type_on"
            android:title="@string/pref_title_streaming_type" />

        <EditTextPreference
            android:defaultValue="127.0.0.1"
            android:enabled="true"
            android:key="@string/pref_address"
            android:summary="@string/pref_summary_address"
            android:title="@string/pref_title_address" />

        <EditTextPreference
            android:defaultValue="5000"
            android:enabled="true"
            android:key="@string/pref_port"
            android:numeric="signed"
            android:summary="@string/pref_summary_port"
            android:title="@string/pref_title_port" />

    </PreferenceCategory>


</PreferenceScreen>