<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/string_main" />
        <item
            android:id="@+id/nav_muse_recording"
            android:icon="@drawable/ic_nav_muse"
            android:title="@string/string_muse" />
        <item
            android:id="@+id/nav_essence"
            android:icon="@drawable/ic_nav_essence"
            android:title="@string/string_essence" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/string_settings" />
    </group>


</menu>
